--- a/index.html
+++ b/index.html
@@ -32,8 +32,6 @@
         </div>
     </header>
 </div>
-
-
 <div class="content">
     <div class="row">
         <div class="Stage">
@@ -53,7 +51,7 @@
                     <br/>
                 </div>
             </section>
-            <section class="container cont" id="Register">
+            <section id="Register">
                 <br/>
                 <h1> test reg </h1>
                 <br/>
@@ -82,28 +80,25 @@
                         <div class="col-lg-4">
                             <div class="game_keys">
                                 <div class="form-row" style="justify-content: center; align-items: center">
-                                    <label for="UP" class="col-sm-2 col-form-label"><a><i
-                                            class="fa fa-arrow-circle-up"></i></a></label>
+                                    <label for="UP" class="col-sm-2 col-form-label"><img src="project_files/images/up.png" height="64" width="64"/></label>
                                     <input type="text" onkeypress="return myKeyPress(event)"
                                            class="col-sm-10 form-control" id="UP" placeholder="PRESS YOUR KEY HERE...">
+
                                 </div>
                                 <div class="form-row" style="justify-content: center; align-items: center">
-                                    <label for="DOWN" class="col-sm-2 col-form-label"><a><i
-                                            class="fa fa-arrow-circle-down"></i></a></label>
+                                    <label for="DOWN" class="col-sm-2 col-form-label"><img src="project_files/images/down.png" height="64" width="64"/></label>
                                     <input type="text" onkeypress="return myKeyPress(event)"
                                            class="col-sm-10 form-control" id="DOWN"
                                            placeholder="PRESS YOUR KEY HERE...">
                                 </div>
                                 <div class="form-row" style="justify-content: center; align-items: center">
-                                    <label for="LEFT" class="col-sm-2 col-form-label"><a><i
-                                            class="fa fa-arrow-circle-left"></i></a></label>
+                                    <label for="LEFT" class="col-sm-2 col-form-label"><img src="project_files/images/left.png" height="64" width="64"/></label>
                                     <input type="text" onkeypress="return myKeyPress(event)"
                                            class="col-sm-10 form-control" id="LEFT"
                                            placeholder="PRESS YOUR KEY HERE...">
                                 </div>
                                 <div class="form-row" style="justify-content: center; align-items: center">
-                                    <label for="RIGHT" class="col-sm-2 col-form-label"><a><i
-                                            class="fa fa-arrow-circle-right"></i></a></label>
+                                    <label for="RIGHT" class="col-sm-2 col-form-label"><img src="project_files/images/right.png" height="64" width="64"/></label>
                                     <input type="text" onkeypress="return myKeyPress(event)"
                                            class="col-sm-10 form-control" id="RIGHT"
                                            placeholder="PRESS YOUR KEY HERE...">
