--- a/index.html
+++ b/index.html
@@ -17,19 +17,21 @@
 
 <body onload="First_Load()">
 <div class="row">
-    <header style="position: fixed ;overflow: auto; margin: 0;width: 100%;">
-        <div id="Logo">
-            <img style="position: center ; margin-left: 40%" src="project_files/images/game-logo.png" width="400"
-                 height="150" alt="Logo">
-        </div>
-        <div id="Navbar">
-            <ul>
-                <li><a href="#" onclick="Show_Tab('Home')">Home</a></li>
-                <li><a href="#" onclick="Show_Tab('Register')">Register</a></li>
-                <li><a href="#" onclick="Show_Tab('Login')">Login</a></li>
-                <li><a href="#" onclick="Show_Tab('About')">About</a></li>
-            </ul>
-        </div>
+    <header>
+        <!--<div class="nav">-->
+            <div id="Logo">
+                <img src="project_files/images/game-logo.png" width="400"
+                     height="150" alt="Logo">
+            </div>
+            <div id="Menu">
+                <ul>
+                    <li><a href="#" onclick="Show_Tab('Home')">Home</a></li>
+                    <li><a href="#" onclick="Show_Tab('Register')">Register</a></li>
+                    <li><a href="#" onclick="Show_Tab('Login')">Login</a></li>
+                    <li><a href="#" onclick="Show_Tab('About')">About</a></li>
+                </ul>
+            </div>
+        <!--</div>-->
     </header>
 </div>
 <div class="content">
@@ -72,8 +74,7 @@
                 <br/>
                 <br/>
             </section>
-            <!--<section id="Game">-->
-            <section id="game_page1" style="margin-left:5%;">
+            <section id="game_page1">
                 <br/>
                 <br/>
                 <br/>
@@ -83,25 +84,29 @@
                         <div class="col-lg-4">
                             <div class="game_keys">
                                 <div class="form-row" style="justify-content: center; align-items: center">
-                                    <label for="UP" class="col-sm-2 col-form-label"><img src="project_files/images/up.png" height="64" width="64"/></label>
+                                    <label for="UP" class="col-sm-2 col-form-label"><img
+                                            src="project_files/images/up.png" height="64" width="64"/></label>
                                     <input type="text" onkeypress="return myKeyPress(event)"
                                            class="col-sm-10 form-control" id="UP" placeholder="PRESS YOUR KEY HERE...">
 
                                 </div>
                                 <div class="form-row" style="justify-content: center; align-items: center">
-                                    <label for="DOWN" class="col-sm-2 col-form-label"><img src="project_files/images/down.png" height="64" width="64"/></label>
+                                    <label for="DOWN" class="col-sm-2 col-form-label"><img
+                                            src="project_files/images/down.png" height="64" width="64"/></label>
                                     <input type="text" onkeypress="return myKeyPress(event)"
                                            class="col-sm-10 form-control" id="DOWN"
                                            placeholder="PRESS YOUR KEY HERE...">
                                 </div>
                                 <div class="form-row" style="justify-content: center; align-items: center">
-                                    <label for="LEFT" class="col-sm-2 col-form-label"><img src="project_files/images/left.png" height="64" width="64"/></label>
+                                    <label for="LEFT" class="col-sm-2 col-form-label"><img
+                                            src="project_files/images/left.png" height="64" width="64"/></label>
                                     <input type="text" onkeypress="return myKeyPress(event)"
                                            class="col-sm-10 form-control" id="LEFT"
                                            placeholder="PRESS YOUR KEY HERE...">
                                 </div>
                                 <div class="form-row" style="justify-content: center; align-items: center">
-                                    <label for="RIGHT" class="col-sm-2 col-form-label"><img src="project_files/images/right.png" height="64" width="64"/></label>
+                                    <label for="RIGHT" class="col-sm-2 col-form-label"><img
+                                            src="project_files/images/right.png" height="64" width="64"/></label>
                                     <input type="text" onkeypress="return myKeyPress(event)"
                                            class="col-sm-10 form-control" id="RIGHT"
                                            placeholder="PRESS YOUR KEY HERE...">
@@ -236,7 +241,7 @@
                 </form>
                 <br/>
             </section>
-            <section id="game_page2" style="margin-left:5%;">
+            <section id="game_page2" >
                 <br/>
                 <br/>
                 <br/>
@@ -268,7 +273,7 @@
                     </div>
                 </div>
             </section>
-            <section id="game_page3" style="margin-left:5%;">
+            <section id="game_page3">
                 <br/>
                 <br/>
                 <br/>
@@ -285,7 +290,6 @@
                 </div>
                 <br/>
             </section>
-            <!--</section>-->
         </div>
     </div>
 </div>
